compiler/tests/en/errors/pure_fnval.salam
// EXPECT: E012
pure func apply(f func(i32) i32, x i32) i32:
    ret f(x)
end

func main:
    g auto = (v i32) => v + 1
    println(apply(g, 4))
end
